<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/xiaoxi"
            android:title="@string/menu_settings" />

    <item
            android:id="@+id/text_undo"
            android:icon="@drawable/undo"
            android:title="@string/undo"
            app:showAsAction="always"
            tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/text_redo"
        android:icon="@drawable/redo"
        android:title="@string/redo"
        app:showAsAction="always" />

    <item
            android:id="@+id/text_play"
            android:icon="@drawable/play"
            android:title="@string/play"
            app:showAsAction="always" />
</menu>