<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_reflow"
                android:icon="@drawable/yingyong"
                android:title="@string/menu_reflow" />
        <item
                android:id="@+id/nav_transform"
                android:icon="@drawable/daima"
                android:title="@string/menu_transform" />
        <item
                android:id="@+id/nav_slideshowl"
                android:icon="@drawable/dhichang"
                android:title="@string/menu_slideshowl" />
        <item
                android:id="@+id/nav_slideshow"
                android:icon="@drawable/wd"
                android:title="@string/menu_slideshow" />
    </group>
</menu>