<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mobile_navigation"
        app:startDestination="@+id/nav_reflow">

    <fragment
            android:id="@+id/nav_reflow"
            android:name="com.yongle.aslua.ui.reflow.ReflowFragment"
            android:label="@string/menu_reflow"
            tools:layout="@layout/fragment_reflow" />
    <fragment
            android:id="@+id/nav_transform"
            android:name="com.yongle.aslua.ui.transform.TransformFragment"
            android:label="@string/menu_transform"
            tools:layout="@layout/fragment_transform" />
    <fragment
            android:id="@+id/nav_slideshowl"
            android:name="com.yongle.aslua.ui.slideshowl.SlideshowlFragment"
            android:label="@string/menu_slideshowl"
            tools:layout="@layout/fragment_slideshowl" />
    <fragment
            android:id="@+id/nav_settings"
            android:name="com.yongle.aslua.ui.settings.SettingsFragment"
            android:label="@string/menu_settings"
            tools:layout="@layout/fragment_settings" />
    <fragment
            android:id="@+id/nav_slideshow"
            android:name="com.yongle.aslua.ui.slideshow.SlideshowFragment"
            android:label="@string/menu_slideshow"
            tools:layout="@layout/fragment_slideshow" />
</navigation>