<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.tianjia.Jiaochengdaima">


        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                style="@style/Widget.Design.TextInputLayout"
                android:id="@+id/editText"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:singleLine="true"
                        android:id="@+id/textt"
                        android:hint="@string/hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_tds"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                app:tabMode="scrollable"
                android:animateLayoutChanges="true"
                app:tabIndicatorHeight="0dp"
                app:tabGravity="start"
                app:tabInlineLabel="false"
                app:tabIndicatorFullWidth="false"
                tools:ignore="SpeakableTextPresentCheck"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText" />

        <io.github.rosemoe.sora.widget.CodeEditor
                android:id="@+id/codeEditor"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                tools:ignore="ClassNameCheck,SpeakableTextPresentCheck"
                app:layout_constraintBottom_toTopOf="@+id/symbolInputView2"
                app:layout_constraintTop_toBottomOf="@+id/tab_tds" />

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/symbolInputView2">


                <TextView
                        android:id="@+id/jctext1"
                        android:text="@string/jctext1"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:layout_width="0dp"
                        android:gravity="center"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                <TextView
                        android:id="@+id/jctext2"
                        android:text="@string/jctext2"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:layout_width="0dp"
                        android:gravity="center"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />
                <TextView
                        android:id="@+id/jctext3"
                        android:text="@string/jctext3"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:layout_width="0dp"
                        android:gravity="center"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                <TextView
                        android:id="@+id/jctext4"
                        android:text="@string/jctext4"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:layout_width="0dp"
                        android:gravity="center"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />
        </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>