<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        tools:context=".ui.slideshow.guanyu.Guanyu">

            <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="238dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="0dp"
                    app:strokeWidth="0dp"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_editor_absoluteX="10dp"
                    android:id="@+id/materialCardView8" />


            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_launcher_round"
                    android:paddingBottom="30dp"
                    android:id="@+id/imageView8"
                    app:layout_constraintTop_toTopOf="@+id/materialCardView8"
                    app:layout_constraintEnd_toEndOf="@+id/materialCardView8"
                    app:layout_constraintStart_toStartOf="@+id/materialCardView8"
                    app:layout_constraintBottom_toBottomOf="@+id/materialCardView8"
                    android:importantForAccessibility="no" />

            <TextView
                    android:text="@string/app_name"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView6"
                    app:layout_constraintEnd_toEndOf="@+id/materialCardView8"
                    app:layout_constraintStart_toStartOf="@+id/materialCardView8"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView8" />


            <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:cardCornerRadius="8dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    app:cardElevation="0dp"
                    app:strokeWidth="0dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/materialCardView8"
                    android:id="@+id/materialCardView9"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
                    tools:layout_editor_absoluteX="10dp" />

            <TextView
                    android:text="@string/copyright"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView11"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/linearLayout2"
                    app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
                    tools:ignore="TextContrastCheck" />

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:gravity="center_horizontal"
                    app:layout_constraintBottom_toTopOf="@+id/textView11"
                    android:id="@+id/linearLayout2">
                <TextView
                        android:textColor="?attr/colorPrimary"
                        android:id="@+id/yonghuxieyi"
                        android:text="@string/yonghuxieyi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:textColor="?attr/colorPrimary"
                        android:text="@string/xiegan"
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                <TextView
                        android:textColor="?attr/colorPrimary"
                        android:id="@+id/yinsizhengce"
                        android:text="@string/yinsizhengce"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>

            <ListView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:dividerHeight="0dp"
                    android:id="@+id/listView"
                    android:divider="@android:color/transparent"
                    android:scrollbars="none"
                    app:layout_constraintBottom_toBottomOf="@+id/materialCardView9"
                    tools:ignore="NestedScrolling"
                    app:layout_constraintTop_toTopOf="@+id/materialCardView9" />

        </androidx.constraintlayout.widget.ConstraintLayout>