<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        tools:context=".ui.tianjia.Chuangjianxiangmu">


        <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp"
                app:strokeWidth="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/materialCardView4">


                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp">

                        <Button
                                android:text="@string/chuanngjian"
                                android:textColor="@color/white"
                                android:layout_gravity="bottom|end"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:layout_marginEnd="10dp"
                                android:id="@+id/button"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
                                app:layout_constraintEnd_toEndOf="@+id/textInputLayout2" />

                        <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                style="@style/Widget.Design.TextInputLayout"
                                app:layout_constraintTop_toTopOf="parent"
                                android:paddingStart="10dp"
                                android:paddingEnd="10dp"
                                android:id="@+id/textInputLayout">

                                <com.google.android.material.textfield.TextInputEditText
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:hint="@string/yingyongmingcheng" />

                        </com.google.android.material.textfield.TextInputLayout>




                        <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                style="@style/Widget.Design.TextInputLayout"
                                android:padding="10dp"
                                app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                                android:id="@+id/textInputLayout2">

                                <com.google.android.material.textfield.TextInputEditText
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:hint="@string/yingyongbaoming" />
                        </com.google.android.material.textfield.TextInputLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:scrollbars="none"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/materialCardView4" />

</androidx.constraintlayout.widget.ConstraintLayout>