<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        tools:context=".ui.slideshow.SlideshowFragment">


        <com.google.android.material.card.MaterialCardView
                android:id="@+id/qquser"
                android:layout_width="match_parent"
                android:layout_height="149dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp"
                app:strokeWidth="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />


        <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:layout_marginStart="24dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/avatar_11"
                tools:ignore="ImageContrastCheck"
                app:layout_constraintBottom_toBottomOf="@+id/qquser"
                app:layout_constraintTop_toTopOf="@+id/qquser"
                android:id="@+id/qquserimg"
                app:layout_constraintStart_toStartOf="@+id/qquser" />


        <ImageView
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_keyboard_arrow_right_24"
                android:paddingEnd="14dp"
                app:layout_constraintEnd_toEndOf="@+id/qquser"
                app:layout_constraintBottom_toBottomOf="@+id/qquser"
                app:layout_constraintTop_toTopOf="@+id/qquser"
                android:id="@+id/imageView3"
                tools:ignore="ContentDescription,RtlSymmetry" />

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="14dp"
                app:layout_constraintBottom_toBottomOf="@+id/qquser"
                app:layout_constraintTop_toTopOf="@+id/qquser"
                app:layout_constraintStart_toEndOf="@+id/qquserimg"
                android:id="@+id/linearLayout"
                tools:ignore="RtlSymmetry">

                <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_mane"
                        android:textColor="@color/black"
                        android:textSize="17sp" />

                <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_gengduo"
                        android:textSize="13sp" />
        </LinearLayout>


        <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="89dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp"
                app:strokeWidth="0dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/qquser"
                android:id="@+id/materialCardView2" />


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="@+id/materialCardView2"
                app:layout_constraintBottom_toBottomOf="@+id/materialCardView2"
                android:baselineAligned="false">

                <LinearLayout
                        android:id="@+id/teizi"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                                android:src="@drawable/teizi"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:id="@+id/imageView1"
                                android:importantForAccessibility="no" />

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:paddingTop="5dp"
                                android:text="@string/teizi"
                                android:textSize="14sp"
                                android:textColor="@color/black" />

                </LinearLayout>

                <LinearLayout
                        android:id="@+id/yuama"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                                android:src="@drawable/yuama"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:id="@+id/imageView2"
                                android:importantForAccessibility="no" />

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:paddingTop="5dp"
                                android:text="@string/yuama"
                                android:textSize="14sp"
                                android:textColor="@color/black" />

                </LinearLayout>

                <LinearLayout
                        android:id="@+id/rootshenhe"
                        android:visibility="gone"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                                android:src="@drawable/shenhe"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:importantForAccessibility="no" />

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:paddingTop="5dp"
                                android:text="@string/rootshenhe"
                                android:textSize="14sp"
                                android:textColor="@color/black" />

                </LinearLayout>

                <LinearLayout
                        android:id="@+id/rootyonghu"
                        android:visibility="gone"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                                android:src="@drawable/yonghu"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:importantForAccessibility="no" />

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:paddingTop="5dp"
                                android:text="@string/rootyonghu"
                                android:textSize="14sp"
                                android:textColor="@color/black" />

                </LinearLayout>

        </LinearLayout>


        <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp"
                app:strokeWidth="0dp"
                android:layout_marginTop="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/materialCardView"
                tools:layout_editor_absoluteX="10dp"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView2" />


        <ListView
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:dividerHeight="0dp"
                android:divider="@android:color/transparent"
                android:scrollbars="none"
                app:layout_constraintTop_toTopOf="@+id/materialCardView"
                app:layout_constraintBottom_toBottomOf="@+id/materialCardView" />




</androidx.constraintlayout.widget.ConstraintLayout>